syntax = "proto3";

package go.micro.api.spotify;

service Spotify {
	rpc RootRedirect(RedirectRequest) returns (RedirectResponse) {}
	rpc Callback(CallbackRequest) returns (CallbackResponse) {}
	rpc Save(SaveRequest) returns (SaveResponse) {}
}

message Message {
	string say = 1;
}

message RedirectRequest {
}

message RedirectResponse {
}

message CallbackRequest {
	string error = 1;
	string code = 2;
	string state = 3;

}

message CallbackResponse {

}

message SaveRequest {
	string user_name = 1;
}

message SaveResponse {

}